<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">SanhuaPosition</string>
    <string name="please_input_group_sign">请输入组标识：</string>
    <string name="space"/>
    <string name="login">登录</string>
    <string name="slave">单控</string>
    <string name="master">主控</string>
    <string name="masterorslave">单主控标识：</string>
    <string name="groupsigntitle">灯组标识：</string>
    <string name="groupsignvalue">灯组标识序列</string>
    <string name="longtitude">经度：</string>
    <string name="latitude">纬度：</string>
    <string name="latitudevalue">纬度值</string>
    <string name="longtitudevalue">经度值</string>
    <string name="scanebutton">开始扫码</string>
    <string name="signcode">码值：</string>
    <string name="finalsend">核实信息并发送</string>
    <string name="back">返回</string>
    <string name="scanelabele">扫描</string>
    <string name="please_input_webaddress">请输入服务器地址：</string>
    <string name="process">过程</string>
    <string name="scane">扫描</string>
</resources>
